Add introductory content and detailed features of AI assistants in software development

--- a/src/ai_assistant_meetup.adoc
+++ b/src/ai_assistant_meetup.adoc
@@ -11,6 +11,10 @@
 2025
 
 == Что это такое и зачем нужно
+
+Использование ИИ и LLM возможно в самых разных сферах человеческой жизни.
+Мы с вами программисты и нас интересует использование ИИ в разработке программного обеспечения.
+
 [.notes]
 --
 - все слышали про искусственный интеллект
@@ -20,24 +24,65 @@
 --
 
 === Что такое ИИ помощник
+
+ИИ помощник - это программа, которая помогает разработчику в его повседневной работе
+
 [.notes]
 --
-- ИИ помощник - это программа, которая помогает разработчику в его повседневной работе
 - помощник может быть как встроенным в IDE, так и отдельным приложением
 - помощник может предлагать варианты исправления ошибок, автоматически генерировать код, анализировать код и многое другое
 -- 
 
+=== Основные задачи ИИ помощника
+[%step]
+* Создание кода
+** анализ документов и генерация кода на их основе
+** на основе "prompt" уточнение и дополнение кода
+
+[%step]
+* Автодополнение кода
+** завершение строк
+** генерация целых функций
+
+[%step]
+* Генерация документации
+** комментарии к коду
+** спецификации OpenAPI
+** диаграммы UML в формате PlantUML на основе кода
+** README файлы
+
+[%step]
+* Написание тестов
+** модульные тесты
+** интеграционные тесты
+** тестовые сценарии
+
+[%step]
+* Анализ кода
+** поиск уязвимостей
+** проверка качества кода 
+** выявление антипаттернов
+
+[%step]
+* Рефакторинг
+** улучшение читаемости кода
+** оптимизация производительности
+** исправление потенциальных ошибок
+
 === Существующие варианты
-[.notes]
---
+
 - Copilot от GitHub
 - Claude от Anthropic
+- Cursor
+
+[.notes]
+--
+кроме них еще есть:
 - Tabnine
+- Continue
 - CodeWhisperer (AWS)
 - Codeium
 - Bard (Google)
-- GPT-4/ChatGPT
-- Amazon CodeCatalyst
 --
 
 === GitHub Copilot (от GitHub/Microsoft)
@@ -53,49 +98,54 @@
 === Claude (от Anthropic)
 [%step]
 * *Плюсы*
+** высокое качество генерируемого кода
 ** мощные возможности анализа кода
 ** хорошее понимание контекста
-** высокое качество генерируемого кода
 * *Минусы*
 ** ограниченная интеграция с IDE
 ** относительно высокая стоимость
 
-=== Tabnine
+=== Cursor
 [%step]
 * *Плюсы*
-** локальная работа без передачи кода
-** быстрые автодополнения
+** открытый исходный код
+** бесплатный
+** работает с любыми репозиториями
 * *Минусы*
-** ограниченная функциональность
-** качество предложений ниже чем у конкурентов
+** находится в активной разработке
+** не дает столь же качественный код, как Claude (*)
 
-=== CodeWhisperer (AWS)
-[%step]
-* *Плюсы*
-** бесплатен для индивидуальных разработчиков
-** хорошая интеграция с AWS сервисами
-* *Минусы*
-** ограниченная поддержка языков
-** привязка к экосистеме AWS
-
-=== Codeium
-[%step]
-* *Плюсы*
-** бесплатная версия
-** поддержка многих языков
-* *Минусы*
-** менее развитые возможности
-** требует подключения к интернету
+[.notes]
+--
+(*) - на момент тестирования. Нужно заметить, что и Copilot, и Cursor 
+могут использовать языковую модель Sonnet 3.5 - признанный лидер по качеству генерации кода.
+--
 
 === Остальные решения
-[%step]
-* Bard (Google), GPT-4, Amazon CodeCatalyst:
-** находятся в активной разработке
-** имеют схожие плюсы и минусы
-** различаются деталями реализации
 
+* Bolt от Stackblitz
+** позволяет создавать приложения на основе промптов в веб-браузере
+** хорош для целей прототипирования и создания скелета приложения
 
-=== Пример простой функции поиска определенных элементов в массиве
+* AI Assistant от JetBrains
+** находится в стадии разработки
+** обещает глубокую интеграцию с платформой IntelliJ IDEA
+
+[.notes]
+--
+- Bolt: ограничен бесплатными токенами
+- AI Assistant: активно развивается, использует Claude Sonnet 3.5
+--
+
+== Как работает ИИ помощник
+С помощью промптов и контекста вы говорите модели, что от неё требуется и она генерирует код.
+Чем больше контекста дать тем качественнее будет код.
+
+[.notes]
+
+== Живая демонстрация возможностей Claude/Cline
+
+Пример простой функции поиска определенных элементов в массиве
 
 [source, java]
 ----
@@ -113,10 +163,43 @@ public List<int[]> getThem() {
 
 == Ссылки
 
-- 
+=== Статьи на тему Claude / Cline & Cursor
+- Автогенерация тестов для Java/Kotlin в IntelliJ IDEA: сравнение AI-инструментов : https://habr.com/ru/companies/explyt/articles/869198/
 
-- 40 лучших ИИ-инструментов 2025 году (проверенные и протестированные) https://habr.com/ru/articles/871268/ 
+- Промптинг: действительно полезное руководство : https://habr.com/ru/articles/865952/
 
-- Killed by LLM (Разработчик представил проект Killed by LLM, где опубликованы бенчмарки, которые были побеждены прогрессом ИИ) https://habr.com/ru/news/871838/ 
+- Как Claude от Anthropic меняет правила игры для разработчиков программного обеспечения : https://habr.com/ru/companies/bothub/news/869104/
 
+- The Ultimate Introduction to Cursor for Developers : https://www.builder.io/blog/cursor-ai-for-developers
 
+- Как ИИ-ассистенты меняют правила игры в разработке ПО — на примере Cursor - https://habr.com/ru/companies/inferit/articles/869880/
+
+- Google вкладывает еще 1 $Bln : https://habr.com/ru/news/875606/ 
+
+=== Статьи на тему Copilot
+
+- GitHub Copilot : https://habr.com/ru/articles/674658/
+
+- Как использовать GitHub Copilot в IDE: советы, приёмы и лучшие практики (перевод) : https://habr.com/ru/companies/otus/articles/815083/ ( оригинал статьи: https://github.blog/developer-skills/github/how-to-use-github-copilot-in-your-ide-tips-tricks-and-best-practices/ )
+
+=== Статьи на тему продуктов OpenAI
+
+- Ваша онлайн-жизнь под контролем ИИ: OpenAI запускает «Operator» : https://www.securitylab.ru/news/555727.php 
+
+=== Прочие статьи
+
+- Неплохой обзор на Реддите : https://www.reddit.com/r/ChatGPTPro/comments/1bdxiur/top_ai_code_assistant/?rdt=33043
+
+- Я 8 часов тестировал модель o1 Pro за 200$ и сравнил ее с Claude Sonnet 3.5 за 20$ - https://habr.com/ru/articles/866168/
+
+- Топ-20 лучших научных статей об ИИ-агентах в 2024 году : https://habr.com/ru/articles/871104/
+
+- ChatGPT и его конкуренты: обзор пяти текстовых нейросетей : https://www.ixbt.com/live/sw/chatgpt-i-ego-konkurenty-obzor-pyati-tekstovyh-neyrosetey.html
+
+- 40 лучших ИИ-инструментов 2025 году (проверенные и протестированные) : https://habr.com/ru/articles/871268/ 
+
+- Killed by LLM (Разработчик представил проект Killed by LLM, где опубликованы бенчмарки, которые были побеждены прогрессом ИИ) : https://habr.com/ru/news/871838/ 
+
+- Claude сопротивляется : https://habr.com/ru/articles/869498/
+
+- Горькая правда о программировании с использованием ИИ : https://habr.com/ru/companies/spring_aio/articles/865720/
