experiments with local llm added

--- a/src/ai_assistant_meetup.adoc
+++ b/src/ai_assistant_meetup.adoc
@@ -182,6 +182,10 @@ MCP servers предоставляют дополнительные сервис
 - рассказать об опыте использования Obsidian MCP
 --
 
+== DeepSeek
+
+https://www.deepseek.com/ - хороший чарт с рейтингом ИИ помощников
+
 [.notes]
 
 == Спасибо
