movies db converted to postgresql in order to demostrate MCP capabilities

--- a/src/ai_assistant_meetup.adoc
+++ b/src/ai_assistant_meetup.adoc
@@ -6,7 +6,7 @@
 
 = ИИ помощник для разработчика
 
-Илья Кретов
+Кретов Илья
 
 2025
 
@@ -19,18 +19,22 @@
 --
 - все слышали про искусственный интеллект
 - хайп, огромные деньги и надежды
+- резко обострившаяся конкуренция в сфере разработки LLM и ИИ помощников, особенно после выхода на рынок китайских решений: все более доступные и мощные модели; перспектива появления достаточно качественных и бесплатных решений в самом ближайшем будущем
 - так ли он хорош, что от него можно ожидать
 - Работая над кодом мы пишем много повторяющихся фрагментов, отличающихся лишь деталями
 --
 
 === Что такое ИИ помощник
 
-ИИ помощник - это программа, которая помогает разработчику в его повседневной работе
+ИИ помощник - это программа, которая помогает разработчику в его повседневной работе.
+Задачи - подсказывать, проверять ошибки, генерировать код и тесты и многое другое
 
 [.notes]
 --
-- помощник может быть как встроенным в IDE, так и отдельным приложением
+- помощник может быть как встроенным в к-л существующее IDE, так и поставляться отдельным приложением
+- может быть в десктоп версии, так и в облаке
 - помощник может предлагать варианты исправления ошибок, автоматически генерировать код, анализировать код и многое другое
+- есть разные режимы работы помощников, разные способы генерации кода и проверки ошибок в зависимости от вендора решения
 -- 
 
 === Основные задачи ИИ помощника
@@ -166,7 +170,7 @@ Db should contain entity "movie" with properties:
 - попросить создать тестовую запись в базе и тут же вернуть полный список
 --
 
-=== MCP servers
+== Серверы MCP 
 
 MCP servers предоставляют дополнительные сервисы/расширения для Claude Desktop & Cline :
 - https://github.com/modelcontextprotocol/servers?tab=readme-ov-file
