--- a/src/ai_assistant_meetup.adoc
+++ b/src/ai_assistant_meetup.adoc
@@ -13,6 +13,7 @@
 == Что это такое и зачем нужно
 
 Использование ИИ и LLM возможно в самых разных сферах человеческой жизни.
+
 Мы с вами программисты и нас интересует использование ИИ в разработке программного обеспечения.
 
 [.notes]
@@ -232,6 +233,8 @@ MCP servers это средство для расширения возможно
 --
 
 == Спасибо
+
+ссылка на видео: https://rutube.ru/video/f5be163728ae4e86a3851fc8269cfad3/
 
 == Ссылки
 
